# HelloCMake

./: .gitignore
01_single_level/: 0_run_build.sh  CMakeLists.txt  README.md
02_multilevel/: 0_run_build.sh  CMakeLists.txt  README.md
02_multilevel/src/: CMakeLists.txt
03_set_output/: 0_run_build.sh  CMakeLists.txt  README.md
03_set_output/src/: main.cpp
04_generate_libs/: 0_run_build.sh  CMakeLists.txt  README.md
04_generate_libs/src/: CMakeLists.txt
05_set_cxx_standard/: CMakeLists.txt  README.md
05_set_cxx_standard/src/: main.cpp
06_set_project_version/: CMakeLists.txt  README.md
07_communication/: 0_run_build.sh  CMakeLists.txt  README.md  config.h.in
07_communication/src/: CMakeLists.txt  main.cpp
08_use_libs/: CMakeLists.txt  README.md
08_use_libs/src/: CMakeLists.txt  main.cpp
09_use_libs_optional/: 0_run_build.sh  CMakeLists.txt  README.md
09_use_libs_optional/src/: CMakeLists.txt  main.cpp
10_add_dependency/: CMakeLists.txt  README.md
10_add_dependency/src/: CMakeLists.txt
11_generate_lis_optional/: 0_run_build.sh  CMakeLists.txt  README.md  config.h.in
12_cmake_build_type/: 0_run_build.sh  CMakeLists.txt  README.md
12_cmake_build_type/src/: main.cpp
